--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "charity",
-    "short_name": "charity",
+    "name": "ghk_monitoring",
+    "short_name": "ghk_monitoring",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#00abef",
-    "theme_color": "#hexcode",
+    "background_color": "#0175C2",
+    "theme_color": "#0175C2",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
