--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"lib/assets/earth.png":["lib/assets/earth.png"],"lib/assets/logo.png":["lib/assets/logo.png"]}
+{"assets/alarm_sound.mp3":["assets/alarm_sound.mp3"]}
